Publish: Improved Laravel Mail Template

--- a/variant.html
+++ b/variant.html
@@ -109,13 +109,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
 <table border="0" cellpadding="0" cellspacing="0" id="u_content_text_1" role="presentation" style="font-family:arial,helvetica,sans-serif;" width="100%">
 <tbody>
 <tr>
-<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:50px 10px 425px 35px;font-family:arial,helvetica,sans-serif;">
-<div class="v-text-align v-font-size" style="font-family: Arvo; font-size: 36px; color: #00388d; line-height: 120%; text-align: left; word-wrap: break-word;">
-<p style="line-height: 120%;"><strong>MEMORIAL <span style="color: #c70029; line-height: 43.2px;">DAY</span></strong></p>
-<p style="line-height: 120%;"><strong><span style="color: #c70029; line-height: 43.2px;">WEEKEND</span> MEGA</strong></p>
-<p style="line-height: 120%;"><strong>SALE</strong></p>
-</div>
-</td>
+<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:50px 10px 425px 35px;font-family:arial,helvetica,sans-serif;">Memorial Day Weekend Mega Sale</td>
 </tr>
 </tbody>
 </table>
@@ -151,11 +145,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
 <table border="0" cellpadding="0" cellspacing="0" id="u_content_heading_2" role="presentation" style="font-family:arial,helvetica,sans-serif;" width="100%">
 <tbody>
 <tr>
-<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:45px 10px 10px 30px;font-family:arial,helvetica,sans-serif;">
-<!--[if mso]><table width="100%"><tr><td><![endif]-->
-<h1 class="v-text-align v-font-size" style="margin: 0px; color: #ffffff; line-height: 130%; text-align: left; word-wrap: break-word; font-family: Arvo; font-size: 22px; font-weight: 400;"><span>Dear Valued Customer,</span></h1>
-<!--[if mso]></td></tr></table><![endif]-->
-</td>
+<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:45px 10px 10px 30px;font-family:arial,helvetica,sans-serif;">Greetings valued customer,</td>
 </tr>
 </tbody>
 </table>
@@ -179,11 +169,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
 <table border="0" cellpadding="0" cellspacing="0" id="u_content_text_2" role="presentation" style="font-family:arial,helvetica,sans-serif;" width="100%">
 <tbody>
 <tr>
-<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 10px 30px;font-family:arial,helvetica,sans-serif;">
-<div class="v-text-align v-font-size" style="font-size: 14px; color: #ced4d9; line-height: 140%; text-align: left; word-wrap: break-word;">
-<p style="line-height: 140%;">We are excited to announce our Memorial Day Weekend special offers and events. Book now to secure your spot!</p>
-</div>
-</td>
+<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 10px 30px;font-family:arial,helvetica,sans-serif;">Join us for exciting events during the Memorial Day Weekend. Book early to secure your spot!</td>
 </tr>
 </tbody>
 </table>
@@ -250,38 +236,21 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
 <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="font-family:arial,helvetica,sans-serif;" width="100%">
 <tbody>
 <tr>
-<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 0px;font-family:arial,helvetica,sans-serif;">
-<div class="v-text-align v-font-size" style="font-size: 14px; line-height: 140%; text-align: center; word-wrap: break-word;">
-<p style="font-size: 14px; line-height: 140%;"><span style="font-size: 16px; line-height: 22.4px;"><strong>Product Name</strong></span></p>
-</div>
-</td>
+<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 0px;font-family:arial,helvetica,sans-serif;">Choose Your Travel Package</td>
 </tr>
 </tbody>
 </table>
 <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="font-family:arial,helvetica,sans-serif;" width="100%">
 <tbody>
 <tr>
-<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 15px;font-family:arial,helvetica,sans-serif;">
-<div class="v-text-align v-font-size" style="font-size: 14px; line-height: 140%; text-align: center; word-wrap: break-word;">
-<p style="font-size: 14px; line-height: 140%;"><span style="font-size: 16px; line-height: 22.4px;"><span style="text-decoration: line-through; font-size: 16px; line-height: 22.4px; color: #e03e2d;">$160.00</span><strong>     |     $120.00</strong></span></p>
-</div>
-</td>
+<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 15px;font-family:arial,helvetica,sans-serif;">Price: $160 (Regular) | Price: $120 (Discounted)</td>
 </tr>
 </tbody>
 </table>
 <table border="0" cellpadding="0" cellspacing="0" id="u_content_button_5" role="presentation" style="font-family:arial,helvetica,sans-serif;" width="100%">
 <tbody>
 <tr>
-<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 30px;font-family:arial,helvetica,sans-serif;">
-<!--[if mso]><style>.v-button {background: transparent !important;}</style><![endif]-->
-<div align="center" class="v-text-align">
-<!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="assets/asset_2f8c5a96.bin" style="height:37px; v-text-anchor:middle; width:151px;" arcsize="11%"  strokecolor="#000000" strokeweight="1px" fillcolor="#ffffff"><w:anchorlock/><center style="color:#292929;"><![endif]-->
-<a class="v-button v-size-width v-font-size" href="assets/asset_2f8c5a96.bin" style="box-sizing: border-box;display: inline-block;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #292929; background-color: #ffffff; border-radius: 4px;-webkit-border-radius: 4px; -moz-border-radius: 4px; width:85%; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;border-top-color: #000000; border-top-style: solid; border-top-width: 1px; border-left-color: #000000; border-left-style: solid; border-left-width: 1px; border-right-color: #000000; border-right-style: solid; border-right-width: 1px; border-bottom-color: #000000; border-bottom-style: solid; border-bottom-width: 1px;font-size: 14px;" target="_blank">
-<span style="display:block;padding:10px 20px;line-height:120%;"><strong><span style="font-size: 14px; line-height: 16.8px;">Shop Now</span></strong></span>
-</a>
-<!--[if mso]></center></v:roundrect><![endif]-->
-</div>
-</td>
+<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 30px;font-family:arial,helvetica,sans-serif;">Book Now</td>
 </tr>
 </tbody>
 </table>
@@ -311,22 +280,14 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
 <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="font-family:arial,helvetica,sans-serif;" width="100%">
 <tbody>
 <tr>
-<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 0px;font-family:arial,helvetica,sans-serif;">
-<div class="v-text-align v-font-size" style="font-size: 14px; line-height: 140%; text-align: center; word-wrap: break-word;">
-<p style="font-size: 14px; line-height: 140%;"><span style="font-size: 16px; line-height: 22.4px;"><strong>Product Name</strong></span></p>
-</div>
-</td>
+<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 0px;font-family:arial,helvetica,sans-serif;">Memorial Day Travel Package</td>
 </tr>
 </tbody>
 </table>
 <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="font-family:arial,helvetica,sans-serif;" width="100%">
 <tbody>
 <tr>
-<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 15px;font-family:arial,helvetica,sans-serif;">
-<div class="v-text-align v-font-size" style="font-size: 14px; line-height: 140%; text-align: center; word-wrap: break-word;">
-<p style="font-size: 14px; line-height: 140%;"><span style="font-size: 16px; line-height: 22.4px;"><span style="text-decoration: line-through; font-size: 16px; line-height: 22.4px; color: #e03e2d;">$160.00</span><strong>     |     $120.00</strong></span></p>
-</div>
-</td>
+<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 15px;font-family:arial,helvetica,sans-serif;">Prices: $160 (Regular) | $120 (Sale)</td>
 </tr>
 </tbody>
 </table>
@@ -335,13 +296,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
 <tr>
 <td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 30px;font-family:arial,helvetica,sans-serif;">
 <!--[if mso]><style>.v-button {background: transparent !important;}</style><![endif]-->
-<div align="center" class="v-text-align">
-<!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="assets/asset_2f8c5a96.bin" style="height:37px; v-text-anchor:middle; width:151px;" arcsize="11%"  strokecolor="#000000" strokeweight="1px" fillcolor="#ffffff"><w:anchorlock/><center style="color:#292929;"><![endif]-->
-<a class="v-button v-size-width v-font-size" href="assets/asset_2f8c5a96.bin" style="box-sizing: border-box;display: inline-block;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #292929; background-color: #ffffff; border-radius: 4px;-webkit-border-radius: 4px; -moz-border-radius: 4px; width:85%; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;border-top-color: #000000; border-top-style: solid; border-top-width: 1px; border-left-color: #000000; border-left-style: solid; border-left-width: 1px; border-right-color: #000000; border-right-style: solid; border-right-width: 1px; border-bottom-color: #000000; border-bottom-style: solid; border-bottom-width: 1px;font-size: 14px;" target="_blank">
-<span style="display:block;padding:10px 20px;line-height:120%;"><strong><span style="font-size: 14px; line-height: 16.8px;">Shop Now</span></strong></span>
-</a>
-<!--[if mso]></center></v:roundrect><![endif]-->
-</div>
+<div align="center" class="v-text-align">Browse & Purchase Now</div>
 </td>
 </tr>
 </tbody>
@@ -372,22 +327,14 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
 <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="font-family:arial,helvetica,sans-serif;" width="100%">
 <tbody>
 <tr>
-<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 0px;font-family:arial,helvetica,sans-serif;">
-<div class="v-text-align v-font-size" style="font-size: 14px; line-height: 140%; text-align: center; word-wrap: break-word;">
-<p style="font-size: 14px; line-height: 140%;"><span style="font-size: 16px; line-height: 22.4px;"><strong>Product Name</strong></span></p>
-</div>
-</td>
+<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 0px;font-family:arial,helvetica,sans-serif;">Memorial Day Travel Package</td>
 </tr>
 </tbody>
 </table>
 <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="font-family:arial,helvetica,sans-serif;" width="100%">
 <tbody>
 <tr>
-<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 15px;font-family:arial,helvetica,sans-serif;">
-<div class="v-text-align v-font-size" style="font-size: 14px; line-height: 140%; text-align: center; word-wrap: break-word;">
-<p style="font-size: 14px; line-height: 140%;"><span style="font-size: 16px; line-height: 22.4px;"><span style="text-decoration: line-through; font-size: 16px; line-height: 22.4px; color: #e03e2d;">$160.00</span><strong>     |     $120.00</strong></span></p>
-</div>
-</td>
+<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 15px;font-family:arial,helvetica,sans-serif;">Prices: $160 (Regular) | $120 (Sale)</td>
 </tr>
 </tbody>
 </table>
@@ -396,13 +343,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
 <tr>
 <td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 30px;font-family:arial,helvetica,sans-serif;">
 <!--[if mso]><style>.v-button {background: transparent !important;}</style><![endif]-->
-<div align="center" class="v-text-align">
-<!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="assets/asset_2f8c5a96.bin" style="height:37px; v-text-anchor:middle; width:151px;" arcsize="11%"  strokecolor="#000000" strokeweight="1px" fillcolor="#ffffff"><w:anchorlock/><center style="color:#292929;"><![endif]-->
-<a class="v-button v-size-width v-font-size" href="assets/asset_2f8c5a96.bin" style="box-sizing: border-box;display: inline-block;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #292929; background-color: #ffffff; border-radius: 4px;-webkit-border-radius: 4px; -moz-border-radius: 4px; width:85%; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;border-top-color: #000000; border-top-style: solid; border-top-width: 1px; border-left-color: #000000; border-left-style: solid; border-left-width: 1px; border-right-color: #000000; border-right-style: solid; border-right-width: 1px; border-bottom-color: #000000; border-bottom-style: solid; border-bottom-width: 1px;font-size: 14px;" target="_blank">
-<span style="display:block;padding:10px 20px;line-height:120%;"><strong><span style="font-size: 14px; line-height: 16.8px;">Shop Now</span></strong></span>
-</a>
-<!--[if mso]></center></v:roundrect><![endif]-->
-</div>
+<div align="center" class="v-text-align">Book Now</div>
 </td>
 </tr>
 </tbody>
@@ -551,12 +492,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
 <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="font-family:arial,helvetica,sans-serif;" width="100%">
 <tbody>
 <tr>
-<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 30px;font-family:arial,helvetica,sans-serif;">
-<div class="v-text-align v-font-size" style="font-size: 14px; color: #ffffff; line-height: 140%; text-align: center; word-wrap: break-word;">
-<p style="font-size: 14px; line-height: 140%;">email@website.com </p>
-<p style="font-size: 14px; line-height: 140%;">+12 458 4658</p>
-</div>
-</td>
+<td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 30px;font-family:arial,helvetica,sans-serif;">Contact us at email@website.com or call +12 458 4658</td>
 </tr>
 </tbody>
 </table>
@@ -580,9 +516,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
 <tbody>
 <tr>
 <td align="left" class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:30px 70px;font-family:arial,helvetica,sans-serif;">
-<div class="v-text-align v-font-size" style="font-size: 14px; line-height: 140%; text-align: center; word-wrap: break-word;">
-<p style="line-height: 140%;">Dear Valued Customer, We are excited to announce our special Memorial Day Weekend sale! Enjoy up to 50% off on all bookings made during this period. Don't miss out on this opportunity to save big! Book now and travel with us this Memorial Day Weekend.</p>
-</div>
+<div class="v-text-align v-font-size" style="font-size: 14px; line-height: 140%; text-align: center; word-wrap: break-word;">Greetings valued customer! We are thrilled to present our Memorial Day Weekend special sale offering discounts of up to 50% on all bookings. Don't let this chance slip away, book now and enjoy your vacation with us!</div>
 </td>
 </tr>
 </tbody>
